fixed taglist, wrapped header title

--- a/src/components/Tags/Tags.module.scss
+++ b/src/components/Tags/Tags.module.scss
@@ -1,5 +1,7 @@
 .tags {
   margin: 6px 0;
+  padding: 0;
+  display: inline-flex;
 }
 
 .tagItem {
